Added link back to GitHub project, corrected instructions

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
 
         <h1 class="text-2xl md:text-3xl font-bold text-center text-gray-800 mb-6">Browser PDF Signature Tool</h1>
         <p class="text-center text-sm text-gray-500 mb-6">All processing happens directly in your browser. No files are uploaded to a server.</p>
+        <p class="text-center text-sm text-gray-500 mb-6">See source code and documentation at <a href="https://github.com/lonestriker/sign-pdf">https://github.com/lonestriker/sign-pdf</a></p>
 
         <!-- Upload Sections -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
