--- a/web/index.html
+++ b/web/index.html
@@ -7,9 +7,15 @@
     <!-- Include Tailwind CSS via Play CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom styles if needed */
+        /* Custom styles */
         #viewer { min-height: 400px; }
         #signature-gallery img.active-signature { border-color: blue; }
+        /* Styles for draw/upload toggle buttons */
+        button.sig-input-toggle.active { border-color: #3b82f6; color: #3b82f6; font-weight: 600; background-color: white; }
+        button.sig-input-toggle:not(.active) { background-color: #e5e7eb; color: #4b5563; border-color: #d1d5db; }
+        /* Styles for signature pad */
+        #signature-pad-canvas { border: 1px dashed #ccc; cursor: crosshair; touch-action: none; }
+        #signature-modal { background-color: rgba(0,0,0,0.5); }
     </style>
 </head>
 <body class="bg-gray-100 font-sans p-4 md:p-8">
@@ -18,7 +24,7 @@
 
         <h1 class="text-2xl md:text-3xl font-bold text-center text-gray-800 mb-6">Browser PDF Signature Tool</h1>
         <p class="text-center text-sm text-gray-500 mb-6">All processing happens directly in your browser. No files are uploaded to a server.</p>
-        <p class="text-center text-sm text-gray-500 mb-6">See source code and documentation at <a href="https://github.com/lonestriker/sign-pdf">https://github.com/lonestriker/sign-pdf</a></p>
+        <p class="text-center text-sm text-gray-500 mb-6">See source code and documentation at <a href="https://github.com/lonestriker/sign-pdf" class="text-blue-600 hover:underline">https://github.com/lonestriker/sign-pdf</a></p>
 
         <!-- Upload Sections -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
@@ -34,20 +40,37 @@
                               hover:file:bg-blue-100 cursor-pointer"/>
             </div>
 
-            <!-- Signature Upload & Gallery -->
+            <!-- Signature Input Area (Upload/Draw) & Gallery -->
             <div class="bg-gray-50 p-4 rounded border border-gray-200">
-                <label for="signature-upload" class="block text-sm font-medium text-gray-700 mb-1">2. Select Signature Image(s):</label>
-                <p class="text-xs text-gray-500 mb-2">(PNG with transparency recommended)</p>
-                <input type="file" id="signature-upload" accept="image/png, image/jpeg, image/gif"
-                       class="block w-full text-sm text-gray-500 mb-3
-                              file:mr-4 file:py-2 file:px-4
-                              file:rounded-full file:border-0
-                              file:text-sm file:font-semibold
-                              file:bg-green-50 file:text-green-700
-                              hover:file:bg-green-100 cursor-pointer"/>
+                <label class="block text-sm font-medium text-gray-700 mb-2">2. Add Signature(s):</label>
+
+                <!-- Upload / Draw Toggle Buttons -->
+                <div class="flex gap-2 mb-3">
+                    <button id="show-upload-btn" class="sig-input-toggle active px-3 py-1 text-sm border rounded">Upload File</button>
+                    <button id="show-draw-btn" class="sig-input-toggle px-3 py-1 text-sm border rounded">Draw Signature</button>
+                </div>
+
+                <!-- File Upload Input (Initially visible) -->
+                <div id="signature-upload-area">
+                     <p class="text-xs text-gray-500 mb-2">(PNG with transparency recommended for uploads)</p>
+                     <input type="file" id="signature-upload" accept="image/png, image/jpeg, image/gif"
+                            class="block w-full text-sm text-gray-500 mb-3
+                                   file:mr-4 file:py-2 file:px-4
+                                   file:rounded-full file:border-0
+                                   file:text-sm file:font-semibold
+                                   file:bg-green-50 file:text-green-700
+                                   hover:file:bg-green-100 cursor-pointer"/>
+                </div>
+                <!-- Draw Button (Trigger for modal, initially hidden) -->
+                <div id="signature-draw-area" class="hidden">
+                    <button id="open-draw-modal-btn" class="px-4 py-2 bg-blue-500 text-white text-sm rounded hover:bg-blue-600">
+                        Open Signature Pad
+                    </button>
+                </div>
+
+                <!-- Gallery -->
                 <div id="signature-gallery" class="mt-2 flex flex-wrap gap-2 border-t pt-2 min-h-[50px]">
-                    <!-- Signature previews appear here -->
-                    <span class="text-xs text-gray-500 italic">Uploaded signatures will appear here. Click one to activate.</span>
+                    <span class="text-xs text-gray-500 italic">Signatures added via Upload or Draw will appear here.</span>
                 </div>
             </div>
         </div>
@@ -55,46 +78,24 @@
         <!-- PDF Viewer and Placement Area -->
         <div id="pdf-viewer-container" class="bg-white p-4 rounded border border-gray-200 mb-6">
             <h2 class="text-xl font-semibold text-gray-800 mb-4 text-center">3. Place & Resize Signature(s) on PDF</h2>
-
-            <!-- PDF Controls -->
             <div id="controls" class="flex justify-center items-center gap-4 mb-4">
-                <button id="prev-page" disabled
-                        class="px-3 py-1 bg-gray-300 text-gray-600 rounded hover:bg-gray-400 disabled:opacity-50 disabled:cursor-not-allowed">
-                    < Prev
-                </button>
+                <button id="prev-page" disabled class="px-3 py-1 bg-gray-300 text-gray-600 rounded hover:bg-gray-400 disabled:opacity-50 disabled:cursor-not-allowed">< Prev</button>
                 <span class="text-sm text-gray-700">Page: <span id="page-num">0</span> / <span id="page-count">0</span></span>
-                <button id="next-page" disabled
-                        class="px-3 py-1 bg-gray-300 text-gray-600 rounded hover:bg-gray-400 disabled:opacity-50 disabled:cursor-not-allowed">
-                    Next >
-                </button>
+                <button id="next-page" disabled class="px-3 py-1 bg-gray-300 text-gray-600 rounded hover:bg-gray-400 disabled:opacity-50 disabled:cursor-not-allowed">Next ></button>
             </div>
-
-            <!-- Viewer Area (Canvas + Signatures) -->
             <div id="viewer" class="relative mx-auto border border-gray-300 bg-gray-200 overflow-hidden w-full md:w-auto inline-block">
-                 <!-- Canvas is added dynamically -->
-                 <!-- Persistent signature placements are added dynamically -->
-
-                 <!-- Active Signature Box (for placing/editing NEW signatures) -->
                  <div id="signatureBox" class="absolute cursor-move border border-dashed border-blue-500 z-10 hidden">
                      <img id="signatureImage" src="#" alt="Active Signature" draggable="false" class="block w-full h-full object-contain pointer-events-none"/>
-                     <!-- Resize Handles -->
                      <div class="resize-handle absolute w-3 h-3 bg-blue-600 border border-white rounded-sm -top-[6px] -left-[6px] cursor-nwse-resize z-20"></div>
                      <div class="resize-handle absolute w-3 h-3 bg-blue-600 border border-white rounded-sm -top-[6px] -right-[6px] cursor-nesw-resize z-20"></div>
                      <div class="resize-handle absolute w-3 h-3 bg-blue-600 border border-white rounded-sm -bottom-[6px] -left-[6px] cursor-nesw-resize z-20"></div>
                      <div class="resize-handle absolute w-3 h-3 bg-blue-600 border border-white rounded-sm -bottom-[6px] -right-[6px] cursor-nwse-resize z-20"></div>
                  </div>
             </div>
-
-            <!-- Instructions & Add Button -->
-            <p class="text-center text-sm text-gray-600 mt-4">Select a signature from the gallery, drag/resize the blue box on the PDF, then click "Add This Signature".</p>
+            <p class="text-center text-sm text-gray-600 mt-4">Select a signature, drag/resize the blue box, then click "Add This Signature".</p>
             <div class="text-center mt-3">
-                <button id="add-signature-btn" disabled
-                        class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300 disabled:opacity-50 disabled:cursor-not-allowed">
-                    Add This Signature to Document
-                </button>
+                <button id="add-signature-btn" disabled class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300 disabled:opacity-50 disabled:cursor-not-allowed">Add This Signature</button>
             </div>
-
-             <!-- Placement Summary -->
             <div id="placement-summary" class="mt-6 text-sm">
                  <h4 class="font-semibold text-gray-700 border-b pb-1 mb-2">Signatures Added:</h4>
                  <ul id="placed-signatures-list" class="list-none p-0 max-h-32 overflow-y-auto space-y-1">
@@ -103,33 +104,47 @@
              </div>
         </div>
 
-
         <!-- Action Button & Status -->
         <div class="action-section text-center mt-6">
-            <button id="generate-button" disabled
-                    class="px-6 py-3 bg-green-600 text-white text-lg font-semibold rounded-lg shadow hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-400 disabled:opacity-50 disabled:cursor-not-allowed">
+            <button id="generate-button" disabled class="px-6 py-3 bg-green-600 text-white text-lg font-semibold rounded-lg shadow hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-400 disabled:opacity-50 disabled:cursor-not-allowed">
                 4. Generate Signed PDF
             </button>
-            <p id="status" class="mt-3 text-sm font-medium min-h-[1.2em]"></p> <!-- Status message area -->
+            <p id="status" class="mt-3 text-sm font-medium min-h-[1.2em]"></p>
         </div>
 
     </div> <!-- /container -->
 
+    <!-- == Signature Drawing Modal == -->
+    <div id="signature-modal" class="fixed inset-0 z-50 items-center justify-center hidden p-4" >
+        <div class="bg-white p-6 rounded-lg shadow-xl max-w-lg w-full mx-auto">
+            <h3 class="text-lg font-semibold mb-4">Draw Your Signature</h3>
+            <div class="bg-gray-100 p-1 rounded border">
+                <!-- Canvas MUST have explicit width/height attributes for signature pad -->
+                <canvas id="signature-pad-canvas" class="w-full h-48 bg-white" width="480" height="192"></canvas>
+            </div>
+            <div class="flex justify-end gap-3 mt-4">
+                <button id="clear-signature-btn" class="px-4 py-2 text-sm bg-gray-300 text-gray-700 rounded hover:bg-gray-400">Clear</button>
+                <button id="save-signature-btn" class="px-4 py-2 text-sm bg-green-600 text-white rounded hover:bg-green-700">Save Signature</button>
+                <button id="close-signature-modal-btn" class="px-4 py-2 text-sm bg-red-500 text-white rounded hover:bg-red-600">Cancel</button>
+            </div>
+        </div>
+    </div>
+
     <!-- ***** IMPORTANT: Load Libraries BEFORE your script ***** -->
     <!-- Load PDF.js -->
-    <!-- Assumes index.html is at the root, and static/js contains the mjs files -->
     <script type="module">
-        // Use relative paths from the HTML file location
         import * as pdfjsLib from './static/js/pdf.mjs';
         pdfjsLib.GlobalWorkerOptions.workerSrc = './static/js/pdf.worker.mjs';
-        window.pdfjsLib = pdfjsLib; // Make it globally accessible for script.js
+        window.pdfjsLib = pdfjsLib;
     </script>
 
     <!-- Load pdf-lib.js -->
     <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
 
+    <!-- Load signature_pad library -->
+    <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
+
     <!-- Load your main script -->
-    <!-- Use a relative path from the HTML file location -->
     <script src="./static/js/script.js"></script>
 
 </body>
